--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-alpha.12",
+    "react-native-swipeable": "^0.6.0",
     "react-native-tab-view": "^2.13.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-unimodules": "~0.7.0",
