--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'triber' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-cookies', :path => '../node_modules/react-native-cookies'
+
   target 'triberTests' do
     inherit! :complete
     # Pods for testing
